templates/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: solar-system
  name: solar-system-service
  namespace: solar-system
spec:
  ports:
  - port: 80 #change to 80
    protocol: TCP
    targetPort: 80 #change to 80
  selector:
    app: solar-system
  type: ClusterIP
