templates/istio-gw.yml
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: solar-system-gateway
# spec:
#   servers:
#   - hosts:
#       - "*"
#   - port:
#       number: 80
#       name: http
#       protocol: HTTP

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: solar-system-gateway
spec:
  selector:
    istio: ingressgateway
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "istio.aspiresoftware.dev"
