templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solar-system
spec:
  rules:
  - host: test.aspiresoftware.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solar-system-service
            port:
              number: 80
  ingressClassName: nginx
