templates/istio-svc.yml
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: solar-system
#   namespace: solar-system
# spec:
#   hosts:
#     - istio.aspiresoftware.dev
#   http:
#   - match:
#     - headers:
#         end-user:
#           exact: jason
#     route:
#     - destination:
#         host: reviews
#         subset: v2
#   - route:
#     - destination:
#         host: reviews
#         subset: v3
# apiVersion: networking.k8s.io/v1
# kind: IngressClass
# metadata:
#   name: istio
# spec:
#   controller: istio.io/ingress-controller
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress
# spec:
#   ingressClassName: istio
#   rules:
#   - host: istio.aspiresoftware.dev
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: solar-system-service
#             port:
#               number: 80

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
   name: vs-solar
spec:
  gateways: 
    - solar-system-gateway
  hosts: 
    - "istio.aspiresoftware.dev"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: solar-system-service.solar-system.svc.cluster.local

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   annotations:
#     kubernetes.io/ingress.class: alb
#   name: ingress
#   namespace: solar-system
# spec:
#   rules:
#   - host: istio.aspiresoftware.dev
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: solar-system-service
#             port:
#               number: 80
