templates/istio_Vsvc.yml
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: solar-vsvc
# spec:
#   hosts:
#   - "*"
#   gateways:
#   - solar-gateway
#   http:
#   - route:
#     - destination:
#         host: solar-system-service 
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: solar-vsvc
spec:
  hosts:
  - "*"
  http:
  - name: "reviews-v2-routes"
    match:
    - uri:
        prefix: "/"
    - destination:
        host: solar-system-service
  - name: "reviews-v1-route"
    route:
    - destination:
        host: solar-system-service
