templates/istio_system-GW.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: solar-gateway
  namespace: istio-ingress
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingress # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
  namespace: solar-system
spec:
  hosts:
  - "istio.aspiresoftware.dev"
  gateways:
  - solar-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: solar-system-service
        port:
          number: 80
